--- a/LAMP/Dockerfile
+++ b/LAMP/Dockerfile
@@ -2,4 +2,6 @@ FROM php:7.0-apache
 RUN apt-get update && apt-get install -y \
     libzip-dev \
     && docker-php-ext-install mysqli zip \
-    && docker-php-ext-configure zip --with-zlib-dir=/usr/ \
+    && docker-php-ext-configure zip --with-zlib-dir=/usr/
+
+RUN a2enmod rewrite expires
