--- a/LAMP-Wordpress/docker-compose.yaml
+++ b/LAMP-Wordpress/docker-compose.yaml
@@ -23,9 +23,29 @@ services:
        - ./php-uploads.ini:/usr/local/etc/php/conf.d/php-uploads.ini
      links:
        - db
-     ports:
-       - "80:80"
      restart: always
      environment:
        WORDPRESS_DB_HOST: db:3306
        WORDPRESS_DB_PASSWORD: wordpress
+       # Comment-out below to disable SSL  
+       VIRTUAL_HOST: mydomain.com 
+       LETSENCRYPT_HOST: mydomain.com
+       LETSENCRYPT_EMAIL: my@email.com
+
+   nginx-proxy:
+     image: jwilder/nginx-proxy
+     ports:
+       - "80:80"
+       - "443:443"
+     volumes:
+       - "/etc/nginx/vhost.d"
+       - "/usr/share/nginx/html"
+       - "/var/run/docker.sock:/tmp/docker.sock:ro"
+       - "/etc/nginx/certs"
+
+   letsencrypt-nginx-proxy-companion:
+     image: jrcs/letsencrypt-nginx-proxy-companion
+     volumes:
+       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+     volumes_from:
+       - "nginx-proxy"
