--- a/Wordpress+Frontend+Api/Api/Dockerfile
+++ b/Wordpress+Frontend+Api/Api/Dockerfile
@@ -1,15 +1,20 @@
 FROM node:8
 
+ENV ENV production
+
 RUN mkdir -p /usr/src/api
 WORKDIR /usr/src/api
 
 # Install api dependencies
 COPY package.json /usr/src/api/
+COPY docker-entrypoint.sh /usr/src/api/
 RUN npm install
 
 # Bundle api source
 COPY . /usr/src/api
 
-EXPOSE 30001 80
+EXPOSE 3001 80
 
-CMD [ "npm", "start" ]
+RUN ["chmod", "+x", "/usr/src/api/docker-entrypoint.sh"]
+
+ENTRYPOINT ["sh", "/usr/src/api/docker-entrypoint.sh"]
