--- a/Wordpress+Frontend+Api/Api/package.json
+++ b/Wordpress+Frontend+Api/Api/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "scripts": {
     "dev": "node server.js",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=development node server.js"
   },
   "dependencies": {
     "express": "^4.16.4"
